Add PurchaseTicketsSingleTransaction option to ticket buyer config options

--- a/sample-dcrwallet.conf
+++ b/sample-dcrwallet.conf
@@ -202,5 +202,8 @@
 ; Proportion of funds to leave in wallet when stake mining
 ; ticketbuyer.balancetomaintainrelative=0.3
 
-; Do not use split transaction when purchasing tickets 
-; ticketbuyer.nosplittransaction=true
+; Do not use split transaction when purchasing tickets
+; ticketbuyer.nosplittransaction=false
+
+; Purchase multi tickets in a single transaction (has no effect when ticketbuyer.nosplittransaction=false)
+; ticketbuyer.purchaseticketssingletransaction=false
