Changed purchaseticketssingletransaction config field to multioutputsstx

--- a/sample-dcrwallet.conf
+++ b/sample-dcrwallet.conf
@@ -206,4 +206,4 @@
 ; ticketbuyer.nosplittransaction=false
 
 ; Purchase multi tickets in a single transaction (has no effect when ticketbuyer.nosplittransaction=false)
-; ticketbuyer.purchaseticketssingletransaction=false
+; ticketbuyer.multioutputsstx=false
