--- a/sample-dcrwallet.conf
+++ b/sample-dcrwallet.conf
@@ -201,3 +201,16 @@
 
 ; Proportion of funds to leave in wallet when stake mining
 ; ticketbuyer.balancetomaintainrelative=0.3
+
+
+
+[SharedTx Options]
+
+; Enable wallet to join other participants in purchasing tickets in a single transaction
+sharedtx.enable=false
+
+; SharedTx server hostname
+sharedtx.host=127.0.0.1:4567
+
+; How long to wait until a failed connection is retried
+sharedtx.retryinterval=3600
